<resources>
    <string name="app_name">dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="default_image_description">TODO</string>
    <string name="product_brand_title">Бренды</string>
    <string name="product_brand_add_btn">Добавить бренд</string>
    <string name="product_cat_title">Категории</string>
    <string name="product_cat_add_btn">Добавить категорию</string>
    <string name="product_products_title">Товары</string>
    <string name="product_table_name">Название</string>
    <string name="product_table_articul">Артикул</string>
    <string name="product_table_cat">Категория</string>
    <string name="product_table_brand">Бренд</string>
    <string name="product_product_add_btn">Добавить товар</string>
    <string name="script_add_btn">Добавить сценарий</string>
    <string name="script_table_good1">Товар 1</string>
    <string name="script_table_good2">Товар 2</string>
    <string name="script_table_video">Имя видеофайла</string>
    <string name="sensor_active_title">Активные сенсоры</string>
    <string name="sensor_scan_title">Сканер сенсоров</string>
    <string name="sensor_table_active_name">Идентификатор</string>
    <string name="sensor_table_active_good">Товар</string>
    <string name="sensor_table_active_articul">Артикул</string>
    <string name="sensor_table_scan_name">Идентификатор</string>
    <string name="sensor_table_scan_date">Дата</string>
    <string name="stand_title">Настройки стенда</string>
    <string name="hint_stand_name">Имя стенда</string>
    <string name="hint_timezone">Часовой пояс</string>
    <string name="hint_description">Описание</string>
    <string name="stand_save_btn">Сохранить изменения</string>
    <string name="stand_settings_title">Настройки воспроизведения</string>
    <string name="hint_delay">Задержка видео</string>
    <string name="hint_wait_time">Время ожидания второй метки</string>
    <string name="stand_switch_stop">Прерывать воспроизведение текущего видео при срабатывании датчика</string>
    <string name="stand_switch_replay">Повтор видео</string>
    <string name="stand_play_one_text">Приостановить прием на N секунд, после включения видео для одного сенсора</string>
    <string name="hint_play_one">Кол-во секунд</string>
    <string name="stand_play_two_text">Приостановить прием на N секунд, после включения видео для двух сенсоров</string>
    <string name="hint_play_two">Кол-во секунд</string>
    <string name="stand_switch_break_two">Прерывать воспроизведение видео двух сенсоров</string>
    <string name="stand_sens">Чувствительность сенсора</string>
    <string name="hint_sens">0 - Очень чувствительно, 99 - Очень не чувствительно</string>
    <string name="stand_move_save_btn">Сохранить изменения</string>
    <string name="item_brand_hint">Бренд</string>
    <string name="item_cat_hint">Категория</string>
    <string name="item_product_hint">Название</string>
    <string name="item_product_arcitul_hint">Артикул</string>
    <string name="default_null_text">null</string>
</resources>
