<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="4dp"
    android:orientation="horizontal"
    android:weightSum="11">

    <TextView
        android:id="@+id/item_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="16sp"
        tool:text="Название" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_product_name_et_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:hint="@string/item_product_hint"
        android:textSize="16sp"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_product_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/item_product_articul"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:textSize="16sp"
        tool:text="Артикул" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_product_articul_et_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:hint="@string/item_product_arcitul_hint"
        android:textSize="16sp"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_product_articul_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/item_product_cat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="16sp"
        tool:text="Категория" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/item_product_cat_list"
        style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/item_product_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="16sp"
        tool:text="Бренд" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/item_product_brand_list"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/btn_product_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_fix"
        android:clickable="true"
        android:contentDescription="@string/default_image_description"
        android:focusable="true"
        android:src="@drawable/ic_create" />

    <ImageView
        android:id="@+id/btn_product_del"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_del"
        android:clickable="true"
        android:contentDescription="@string/default_image_description"
        android:focusable="true"
        android:src="@drawable/ic_back" />

    <ImageView
        android:id="@+id/btn_product_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_add"
        android:clickable="true"
        android:contentDescription="@string/default_image_description"
        android:focusable="true"
        android:src="@drawable/ic_ok"
        android:visibility="gone" />

</LinearLayout>
